Add heroku staging server to circle.yml

--- a/circle.yml
+++ b/circle.yml
@@ -3,3 +3,7 @@ deployment:
     branch: master
     heroku:
       appname: transcriptify
+  staging:
+    branch: staging
+    heroku:
+      appname: transcriptify-staging
